# CWAN-Implementation

./: .env  app.log.10  app.log.2  app.log.3  app.log.4  app.log.5  app.log.6  app.log.7  app.log.8  pyproject.toml
cwan/: __init__.py  config.py  context_processors.py  logging_config.py  routes.py  run.py
cwan/extensions/: base_extension.py  extension_manager.py
cwan/static/css/: styles.css
cwan/templates/: base.html
sample_project/: setup.cfg
sample_project/cwanext/sample_project/: __init__.py  database.py  sample_project.py
sample_project/cwanext/sample_project/config/: config.py
sample_project/cwanext/sample_project/routers/: Authentication.py
sample_project/cwanext/sample_project/static/css/: Account.css  Dashboard.css  Home.css
sample_project/cwanext/sample_project/static/js/: Account.js  Newshipment.js  login.js
sample_project/cwanext/sample_project/static/json-schema/: cwan_project.Dashboard.json  cwan_project.Home.json  cwan_project.login.json  cwan_project_Account.json  cwan_project_Signup.json
sample_project/cwanext/sample_project/templates/: Account.html  Dashboard.html  Home.html  Login.html  Myshipment.html  Newshipment.html  sign_up.html
sample_project/cwanext_sample_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scmProject/: setup.cfg
scmProject/cwanext/scmProject/: __init__.py  scmProject.py
scmProject/cwanext/scmProject/static/css/: Account.css  Dashboard.css  Home.css  Myshipment.css  Newshipment.css  sign_up.css
scmProject/cwanext/scmProject/static/js/: Myshipment.js  Newshipment.js  login.js  sign-up.js
scmProject/cwanext/scmProject/static/json-schema/: cwan_project.Dashboard.json  cwan_project.Home.json  cwan_project_Account.json  cwan_project_Signup.json  example.txt
scmProject/cwanext/scmProject/templates/: Account.html  Dashboard.html  Home.html  Login.html  Myshipment.html  Newshipment.html  sign_up.html
scmProject/scmProject.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
