[metadata]
name = scmProject
version = 0.1.0
description = CWAN Extension for scmProject
long_description = file: README.md
long_description_content_type = text/markdown
author = DileepSanka
author_email = sanka.dileep@exafluence.com
license = MIT
classifiers =
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.11.5
            Programming Language :: Python :: 3.11.5
keywords = CWAN	

[options]
packages = find:
namespace_packages = cwanext
install_requires =
                 typing_extensions
                 flask[async]
include_package_data = True

[options.entry_points]
cwan.extensions =
            scmProject = cwanext.scmProject.scmProject:Extension